CM-1153: Fix photo gallery alignment issue (#1140)

--- a/src/gatsby/src/styles/parks.scss
+++ b/src/gatsby/src/styles/parks.scss
@@ -211,6 +211,10 @@
   &--small {
     height: 196px;
   }
+
+  &--big {
+    margin-top: 4px;
+  }
 }
 
 .show-photos {
